
Ver.4.3 (in development)
- Validation doesn't call the eval function, but it changes to evaluate the expression to validate.
- The 'validation' in a context can set the 'notify' parameter. Its value can be 'alert', 'inline' and 'end-of-sibling'.
- The DataConverter_NullZeroString class added. This is for numeric field that the blank is treated as NULL.
- [BUG FIX] In case of a validation didn't meet, all calculation fields updated.
- [BUG FIX] Parser recognized some operators as a part of variables.
- [BUG FIX] The sum function couldn't aggregate formatted values.
- [BUG FIX] Formetter classes didn't work in the updating task.

Ver.4.2 (2014/3/13)
- Calculation Field started to work. See the 'Sample_invoice'.
- Send emails after the load/edit/new database operations.
- Installation procedure is changed. We recommend to clone the repository and use the 'buildup.sh' script.
- INTERMediatorOnPage.processingAfterPostOnlyContext has TWO parameters.
- DataConverter_HTMLString supports double and single quote to convert to reference character.
- DataConverter_HTMLString supports disabling HTML escaping (by specifying 'parameter' => 'noescape' ).
- When the 'transaction' set to 'none', the update processing improved and update once for single record.
- New sample "Asset Management Sample" is added.
- Update sample_schema_mysql.txt/sample_schema_sqlite.txt/sample_schema_pgsql.txt for Asset Management Sample.
- Update TestDB.fmp12/TestDB.fp7/sample_schema_filemaker.php for Asset Management Sample.
- Update TestDB.fp7 for using sample_schema_filemaker.php.
- [BUG FIX] Fix setIdValue() of INTER-Mediator.js to enable setting the value of the field to the attribute of
  the node again when specifying the IM target and displaying multiple records.
- [BUG FIX] Modified DataConverter_MySQLDateTime class. In case of NULL field, it shows '' string.
- [BUG FIX] DIV or SPAN tags data-im-control didn't recognized correctly.
- [BUG FIX] Enable handling the data including U+2028/U+2029.
