@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../sample.css"/>
     <link rel="stylesheet" href="codemirror/lib/codemirror.css">
     <title>INTER-Mediator - Sample - Authorized Chat / MySQL</title>
-    <script type="text/javascript" src="tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
+    <script type="text/javascript" src="tinymce/js/tinymce/tinymce.min.js"></script>
     <script src="codemirror/lib/codemirror.js"></script>
     <script src="codemirror/addon/runmode/runmode.js"></script>
     <script src="codemirror/addon/runmode/colorize.js"></script>
@@ -28,8 +28,8 @@
         tinymceOption = {
             // General options
             mode: "textareas",
-            theme: "advanced",
-            plugins: "autolink,lists,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template,wordcount,advlist,autosave,visualblocks",
+            theme: "modern",
+            plugins: ",advlist,anchor,autolink,autoresize,autosave,bbcode,charmap,code,contextmenu,directionality,emoticons,example,example_dependency,fullpage,fullscreen,hr,image,insertdatetime,layer,legacyoutput,link,lists,importcss,media,nonbreaking,noneditable,pagebreak,paste,preview,print,save,searchreplace,spellchecker,tabfocus,table,template,textcolor,visualblocks,visualchars,wordcount",
 
             // Theme options
             theme_advanced_buttons1: "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,styleselect,formatselect,fontselect,fontsizeselect",
