@@ -20,22 +20,6 @@
  *   INTER-Mediator is supplied under MIT License.
  */
 
-//  Added by stlsmiths 6/13/2011
-//  re-define Array.indexOf, because IE doesn't know it ...
-//
-//  from http://stellapower.net/content/javascript-support-and-arrayindexof-ie
-//	if (!Array.indexOf) {
-//		Array.prototype.indexOf = function (obj, start) {
-//			for (var i = (start || 0); i < this.length; i++) {
-//				if (this[i] === obj) {
-//					return i;
-//				}
-//			}
-//			return -1;
-//		}
-//	}
-// This 'patch' is already added in the INTER-Mediator. So I commented it out. (msyk Mar 3, 2014)
-
 var Parser = (function (scope) {
     var TNUMBER = 0;
     var TOP1 = 1;
@@ -261,74 +245,6 @@ var Parser = (function (scope) {
             }
             return nstack[0];
         },
-/*
-        toString: function (toJS) {
-            console.error("toString");
-            var nstack = [];
-            var n1;
-            var n2;
-            var n3;
-            var f;
-            var L = this.tokens.length;
-            var item;
-            var i = 0;
-            for (i = 0; i < L; i++) {
-                item = this.tokens[i];
-                var type_ = item.type_;
-                if (type_ === TNUMBER) {
-                    nstack.push(escapeValue(item.number_));
-                }
-                else if (type_ === TOP3) {
-                    n3 = nstack.pop();
-                    n2 = nstack.pop();
-                    n1 = nstack.pop();
-                    f = item.index_;
-                    if (toJS && f == "^") {
-                        nstack.push("f(" + n1 + "," + n2 + "," + n3 + ")");
-                    }
-                    else {
-                        nstack.push("f(" + n1 + "," + n2 + "," + n3 + ")");
-                    }
-                }
-                else if (type_ === TOP2) {
-                    n2 = nstack.pop();
-                    n1 = nstack.pop();
-                    f = item.index_;
-                    if (toJS && f == "^") {
-                        nstack.push("Math.pow(" + n1 + "," + n2 + ")");
-                    }
-                    else {
-                        nstack.push("(" + n1 + f + n2 + ")");
-                    }
-                }
-                else if (type_ === TVAR) {
-                    nstack.push(item.index_);
-                }
-                else if (type_ === TOP1) {
-                    n1 = nstack.pop();
-                    f = item.index_;
-                    if (f === "-") {
-                        nstack.push("(" + f + n1 + ")");
-                    }
-                    else {
-                        nstack.push(f + "(" + n1 + ")");
-                    }
-                }
-                else if (type_ === TFUNCALL) {
-                    n1 = nstack.pop();
-                    f = nstack.pop();
-                    nstack.push(f + "(" + n1 + ")");
-                }
-                else {
-                    throw new Error("invalid Expression");
-                }
-            }
-            if (nstack.length > 1) {
-                throw new Error("invalid Expression (parity)");
-            }
-            return nstack[0];
-        },
-        */
 
         variables: function () {
             var L = this.tokens.length;
@@ -720,19 +636,6 @@ var Parser = (function (scope) {
 
         Parser.ops1 = {
             "-": neg//,   // The minus operatior should be specially handled.
-//            "sin": Math.sin,
-//            "cos": Math.cos,
-//            "tan": Math.tan,
-//            "asin": Math.asin,
-//            "acos": Math.acos,
-//            "atan": Math.atan,
-//            "sqrt": Math.sqrt,
-//            "log": Math.log,
-//            "abs": Math.abs,
-//            "ceil": Math.ceil,
-//            "floor": Math.floor,
-//            "round": Math.round,
-//            "exp": Math.exp
         };
         Parser.ops2 = {};
         Parser.ops3 = {};
@@ -852,10 +755,6 @@ var Parser = (function (scope) {
 
                     if (expected & CALL) {
                         funcstack.push(true);
-//                        noperators += 2;
-//                        this.tokenprio = -2;
-//                        this.tokenindex = -1;
-//                        this.addfunc(tokenstack, operstack, TFUNCALL);
                     } else {
                         funcstack.push(false);
                     }
@@ -880,14 +779,6 @@ var Parser = (function (scope) {
 
                     expected = (OPERATOR | RPAREN | COMMA | LPAREN | CALL);
                 }
-//                else if (this.isComma()) {
-//                    if ((expected & COMMA) === 0) {
-//                        this.error_parsing(this.pos, "unexpected \",\"");
-//                    }
-////                    this.addfunc(tokenstack, operstack, SEP);
-////                    noperators += 2;
-//                    expected = (PRIMARY | LPAREN | FUNCTION | SIGN);
-//                }
                 else if (this.isConst()) {
                     if ((expected & PRIMARY) === 0) {
                         this.error_parsing(this.pos, "unexpected constant");
